(refactor) Fix header spacing

--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -21,7 +21,6 @@ body {
   text-align: right;
 }
 
-
 /* Header */
 
 .header {
@@ -29,8 +28,9 @@ body {
   color: #FFF;
   width: 100%;
   position: fixed;
-  top: 0;
   height: 5rem;
+  top: 0;
+  padding: .75rem 0;
   /*padding: .75rem;*/
   /* TODO: replace hard-coded height with JavaScript so it can be any height */
 }
@@ -88,11 +88,13 @@ body {
 }
 
 .listItem .action button {
+  background: none;
+  border: none;
   color: #ccc;
   cursor: pointer;
   display: block;
   font-size: 1rem;
-  padding: 0.75rem;
+  padding: 1rem;
   margin: 0;
   width: 100%;
 }
